--- a/web/resources/css/css-a/style.css
+++ b/web/resources/css/css-a/style.css
@@ -5,19 +5,19 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 --*/
 @font-face {
     font-family: 'Oxygen-Bold';
-    src:url(../fonts/Oxygen-Bold.ttf) format('truetype');
+    src:url(resources/fonts/Oxygen-Bold.ttf) format('truetype');
 }
 @font-face {
     font-family: 'Ubuntu-Regular';
-    src:url(../fonts/Ubuntu-Regular.ttf) format('truetype');
+    src:url(resources/fonts/Ubuntu-Regular.ttf) format('truetype');
 }
 @font-face {
     font-family: 'Ubuntu-Bold';
-    src:url(../fonts/Ubuntu-Bold.ttf) format('truetype');
+    src:url(resources/fonts/Ubuntu-Bold.ttf) format('truetype');
 }
 @font-face{
 	font-family:'Oxygen-Regular';
-	src:url(../fonts/Oxygen-Regular.ttf) format('truetype');
+	src:url(resources/fonts/Oxygen-Regular.ttf) format('truetype');
 }
 html,body{
 	background:#fff;
@@ -72,7 +72,7 @@ h1,h2,h3,h4,h5,h6,label,p{
 	width: 17px;
     height: 17px;
     display: block;
-    background: url(../images/img-sprite.png)no-repeat -14px -14px ;
+    background: url(resources/images/img-sprite.png)no-repeat -14px -14px ;
 	margin:0 0.3em;
 }
 .header-social ul li a i.ic1{
@@ -88,7 +88,7 @@ h1,h2,h3,h4,h5,h6,label,p{
    background-position:-199px -13px ;
 }
 .header-social ul li a i:hover{
-    background:url(../images/img-sprite.png)no-repeat -14px -52px ;
+    background:url(resources/images/img-sprite.png)no-repeat -14px -52px ;
 }
 .header-social ul li a i.ic1:hover{
     background-position:  -55px -50px ;
@@ -235,7 +235,7 @@ a.item_add {
 	width: 100%;
     height: 700px;
     display: block;
-    background: url(../images/ba11.jpg)no-repeat right top;
+    background: url(resources/images/ba11.jpg)no-repeat right top;
 	overflow-x:hidden;
 }
 .no-cssanimations .rw-wrapper .rw-sentence span:first-child{
@@ -1086,7 +1086,7 @@ nav.nav-sidebar {
 }
 .checkbox1 input + i:after {
 	content: '';
-	background: url("../images/tick1.png") no-repeat 1px 2px;
+	background: url("resources/images/tick1.png") no-repeat 1px 2px;
 	top: -1px;
 	left: -1px;
 	width: 15px;
@@ -1300,7 +1300,7 @@ a.at-in {
   position: relative;
 }
 .close1, .close2, .close3 {
-  background: url('../images/close.png') no-repeat 0px 0px ;
+  background: url('resources/images/close.png') no-repeat 0px 0px ;
   cursor: pointer;
   width: 28px;
   height: 28px;
