--- a/web/resources/css/css-a/style.css
+++ b/web/resources/css/css-a/style.css
@@ -4,20 +4,25 @@ License: Creative Commons Attribution 3.0 Unported
 License URL: http://creativecommons.org/licenses/by/3.0/
 --*/
 @font-face {
+    font-family: 'Glyphicons Halflings';
+    src: url('http://localhost:8084/wear_it_1.2/fonts/glyphicons-halflings-regular.eot');
+    src: url('http://localhost:8084/wear_it_1.2/fonts/glyphicons-halflings-regular.eot?#iefix') format('embedded-opentype'), url('http://localhost:8084/wear_it_1.2/fonts/glyphicons-halflings-regular.woff') format('woff'), url('http://localhost:8084/wear_it_1.2/fonts/glyphicons-halflings-regular.ttf') format('truetype'), url('http://localhost:8084/wear_it_1.2/fonts/glyphicons-halflings-regular.svg#glyphicons-halflingsregular') format('svg');
+}
+@font-face {
     font-family: 'Oxygen-Bold';
-    src:url(resources/fonts/Oxygen-Bold.ttf) format('truetype');
+    src:url('http://localhost:8084/wear_it_1.2/resources/fonts/Oxygen-Bold.ttf') format('truetype');
 }
 @font-face {
     font-family: 'Ubuntu-Regular';
-    src:url(resources/fonts/Ubuntu-Regular.ttf) format('truetype');
+    src:url('http://localhost:8084/wear_it_1.2/resources/fonts/Ubuntu-Regular.ttf') format('truetype');
 }
 @font-face {
     font-family: 'Ubuntu-Bold';
-    src:url(resources/fonts/Ubuntu-Bold.ttf) format('truetype');
+    src:url('http://localhost:8084/wear_it_1.2/resources/fonts/Ubuntu-Bold.ttf') format('truetype');
 }
 @font-face{
 	font-family:'Oxygen-Regular';
-	src:url(resources/fonts/Oxygen-Regular.ttf) format('truetype');
+	src:url('http://localhost:8084/wear_it_1.2/resources/fonts/Oxygen-Regular.ttf') format('truetype');
 }
 html,body{
 	background:#fff;
@@ -72,7 +77,7 @@ h1,h2,h3,h4,h5,h6,label,p{
 	width: 17px;
     height: 17px;
     display: block;
-    background: url(resources/images/img-sprite.png)no-repeat -14px -14px ;
+    background: url('http://localhost:8084/wear_it_1.2/resources/images/img-sprite.png')no-repeat -14px -14px ;
 	margin:0 0.3em;
 }
 .header-social ul li a i.ic1{
@@ -88,7 +93,7 @@ h1,h2,h3,h4,h5,h6,label,p{
    background-position:-199px -13px ;
 }
 .header-social ul li a i:hover{
-    background:url(resources/images/img-sprite.png)no-repeat -14px -52px ;
+    background:url('http://localhost:8084/wear_it_1.2/resources/images/img-sprite.png')no-repeat -14px -52px ;
 }
 .header-social ul li a i.ic1:hover{
     background-position:  -55px -50px ;
@@ -235,7 +240,7 @@ a.item_add {
 	width: 100%;
     height: 700px;
     display: block;
-    background: url(resources/images/ba11.jpg)no-repeat right top;
+    background: url('http://localhost:8084/wear_it_1.2/resources/images/ba11.jpg')no-repeat right top;
 	overflow-x:hidden;
 }
 .no-cssanimations .rw-wrapper .rw-sentence span:first-child{
@@ -1086,7 +1091,7 @@ nav.nav-sidebar {
 }
 .checkbox1 input + i:after {
 	content: '';
-	background: url("resources/images/tick1.png") no-repeat 1px 2px;
+	background: url("http://localhost:8084/wear_it_1.2/resources/images/tick1.png") no-repeat 1px 2px;
 	top: -1px;
 	left: -1px;
 	width: 15px;
@@ -1300,7 +1305,7 @@ a.at-in {
   position: relative;
 }
 .close1, .close2, .close3 {
-  background: url('resources/images/close.png') no-repeat 0px 0px ;
+  background: url('http://localhost:8084/wear_it_1.2/resources/images/close.png') no-repeat 0px 0px ;
   cursor: pointer;
   width: 28px;
   height: 28px;
