--- a/web/resources/css/css-a/style.css
+++ b/web/resources/css/css-a/style.css
@@ -597,7 +597,7 @@ a.buy-now:hover{
 	width: 100%;
     height: 250px;
     display: block;
-    background: url(../images/back.jpg)no-repeat ;
+    background: url('http://localhost:8084/wear_it_1.2/resources/images/back.jpg')no-repeat ;
 	padding:5em 0;
 }
 .banner-top h1{
